--- a/contact.html
+++ b/contact.html
@@ -66,8 +66,21 @@
               <div class="text-22-light">Let us know what you are looking forward to discuss.</div>
             </div>
             <div class="w-form">
-              <form id="email-form" name="email-form" data-name="Email Form">
-                <div class="w-layout-grid grid-32"><a href="#" class="button-6 w-button">UX Consulting</a><a href="#" class="button-6 w-button">Visual design</a><a href="#" class="button-6 w-button">Branding</a><a href="#" class="button-5 w-button">Digital Transformation</a><a id="w-node-90dc965b8e56-94ffa756" href="#" class="button-6 w-button">Front End Dev</a><a href="#" class="button-6 w-button">Back End Dev</a><a href="#" class="button-6 w-button">Strategy Design</a><a href="#" class="button-6 w-button">Mobile App</a><a href="#" class="button-6 w-button">Enterprise App</a><a href="#" class="button-5 w-button">Product Development</a><a href="#" class="button-6 w-button">User Testing</a><a href="#" class="button-6 w-button">Something more</a></div>
+              <form id="contact" name="contact" data-name="Contact Form">
+                <div class="w-layout-grid grid-32">
+                  <input type="hidden" name="position" >
+                  <a href="#" name="position" id="UX Consulting" class="button-6 w-button">UX Consulting</a>
+                  <a href="#" name="position" id="Visual design" class="button-6 w-button">Visual design</a>
+                  <a href="#" name="position" id="Branding" class="button-6 w-button">Branding</a>
+                  <a href="#" name="position" id="Digital Transformation" class="button-5 w-button">Digital Transformation</a>
+                  <a href="#"  name="position" id="Front End Dev" class="button-6 w-button">Front End Dev</a>
+                  <a href="#" name="position" id="Back End Dev" class="button-6 w-button">Back End Dev</a>
+                  <a href="#"  name="position" id="Strategy Design" class="button-6 w-button">Strategy Design</a>
+                  <a href="#" name="position" id="Mobile App" class="button-6 w-button">Mobile App</a>
+                  <a href="#"  name="position" id="Enterprise App" class="button-6 w-button">Enterprise App</a>
+                  <a href="#"  name="position" id="Product Development" class="button-5 w-button">Product Development</a>
+                  <a href="#"  name="position" id="User Testing" class="button-6 w-button">User Testing</a>
+                 <a href="#" name="position" id="Something more" class="button-6 w-button">Something more</a></div>
                 <div class="w-layout-grid grid-contact">
                   <div class="form-element-1"><label for="name" class="form-label">Name</label><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name"></div>
                   <div class="form-element-1"><label for="name-6" class="form-label">Mail</label><input type="text" class="text-field w-input" maxlength="256" name="email" data-name="Name 6" placeholder="" id="name-6"></div>
@@ -88,14 +101,21 @@
               <div class="text-22-light">Hey, Fill in the details below to join us.</div>
             </div>
             <div class="w-form">
-              <form id="email-form" name="email-form" data-name="Email Form">
-                <div class="w-layout-grid grid-32"><a href="#" class="button-5 w-button">UX Designer</a><a href="#" class="button-5 w-button">Product Designer</a><a href="#" class="button-5 w-button">UI Designer</a><a href="#" class="button-5 w-button">Front-End Developer</a><a id="w-node-98f688acfcc3-94ffa756" href="#" class="button-5 w-button">Branding Consultant</a><a id="w-node-98f688acfcc5-94ffa756" href="#" class="button-5 w-button">Mobile Developer</a></div>
+              <form id="career" name="career" data-name="Career Form">
+                <div class="w-layout-grid grid-32">
+                  <input type="hidden" name="position" ><a href="#" name="position" id="UX Designer"  class="button-5 w-button">UX Designer</a>
+                  <a href="#" name="position" id="Product Designer" class="button-5 w-button">Product Designer</a>
+                  <a href="#" name="position" id="UI Designer"  class="button-5 w-button">UI Designer</a>
+                 <a href="#" name="position" id="Front-End Developer"  class="button-5 w-button">Front-End Developer</a>
+                  <a href="#" name="position" id="Branding Consultant"  class="button-5 w-button">Branding Consultant</a>
+                 <a href="#" name="position" id="Mobile Developer"  class="button-5 w-button">Mobile Developer</a>
+                </div>
                 <div class="w-layout-grid grid-contact">
-                  <div class="form-element-1"><label for="name-9" class="form-label">Name</label><input type="text" class="text-field w-input" maxlength="256" name="name-8" data-name="Name 8" placeholder="" id="name-8"></div>
-                  <div class="form-element-1"><label for="name-9" class="form-label">Mail</label><input type="text" class="text-field w-input" maxlength="256" name="name-6" data-name="Name 6" placeholder="" id="name-6"></div>
-                  <div class="form-element-1"><label for="name-9" class="form-label">Phone</label><input type="tel" class="text-field w-input" maxlength="256" name="name-5" data-name="Name 5" placeholder="" id="name-5"></div>
-                  <div class="form-element"><a href="#" class="button-7 w-button">Attach Resume</a><input type="tel" class="text-field w-input" maxlength="256" name="name-5" data-name="Name 5" placeholder="" id="name-5"></div>
-                  <div class="form-element-1"><label for="name-9" class="form-label">Portfolio URL</label><input type="text" class="text-field w-input" maxlength="256" name="name-5" data-name="Name 5" placeholder="" id="name-5"></div>
+                  <div class="form-element-1"><label for="name-9" class="form-label">Name</label><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="Name 8" placeholder="" id="name-8"></div>
+                  <div class="form-element-1"><label for="name-9" class="form-label">Mail</label><input type="text" class="text-field w-input" maxlength="256" name="email" data-name="Name 6" placeholder="" id="name-6"></div>
+                  <div class="form-element-1"><label for="name-9" class="form-label">Phone</label><input type="tel" class="text-field w-input" maxlength="256" name="phone" data-name="Name 5" placeholder="" id="name-5"></div>
+                  <div class="form-element"><label class="btn custom-input-btn"><input type="file" name="resume" accept="application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document" id="resume" style="display: none;"><a class="button-7 w-button">Attach Resume</a></label></div>
+                  <div class="form-element-1"><label for="name-9" class="form-label">Portfolio URL</label><input type="text" class="text-field w-input" maxlength="256" name="portfolio_url" data-name="Name 5" placeholder="" id="name-5"></div>
                 </div><input type="submit" value="Submit" data-wait="Please wait..." class="button-3 w-button"></form>
               <div class="w-form-done">
                 <div>Thank you! Your submission has been received!</div>
