--- a/contact.html
+++ b/contact.html
@@ -67,20 +67,21 @@
             </div>
             <div class="w-form">
               <form id="contact" name="contact" data-name="Contact Form">
-                <div class="w-layout-grid grid-32">
+                <!-- <div class="w-layout-grid grid-32">
                   <input type="hidden" name="position" >
                   <a href="#" name="position" id="UX Consulting" class="button-6 w-button">UX Consulting</a>
                   <a href="#" name="position" id="Visual design" class="button-6 w-button">Visual design</a>
                   <a href="#" name="position" id="Branding" class="button-6 w-button">Branding</a>
                   <a href="#" name="position" id="Digital Transformation" class="button-5 w-button">Digital Transformation</a>
-                  <a href="#"  name="position" id="Front End Dev" class="button-6 w-button">Front End Dev</a>
+                  <a href="#" name="position" id="Front End Dev" class="button-6 w-button">Front End Dev</a>
                   <a href="#" name="position" id="Back End Dev" class="button-6 w-button">Back End Dev</a>
-                  <a href="#"  name="position" id="Strategy Design" class="button-6 w-button">Strategy Design</a>
+                  <a href="#" name="position" id="Strategy Design" class="button-6 w-button">Strategy Design</a>
                   <a href="#" name="position" id="Mobile App" class="button-6 w-button">Mobile App</a>
-                  <a href="#"  name="position" id="Enterprise App" class="button-6 w-button">Enterprise App</a>
-                  <a href="#"  name="position" id="Product Development" class="button-5 w-button">Product Development</a>
-                  <a href="#"  name="position" id="User Testing" class="button-6 w-button">User Testing</a>
-                 <a href="#" name="position" id="Something more" class="button-6 w-button">Something more</a></div>
+                  <a href="#" name="position" id="Enterprise App" class="button-6 w-button">Enterprise App</a>
+                  <a href="#" name="position" id="Product Development" class="button-5 w-button">Product Development</a>
+                  <a href="#" name="position" id="User Testing" class="button-6 w-button">User Testing</a>
+                  <a href="#" name="position" id="Something more" class="button-6 w-button">Something more</a>
+                </div> -->
                 <div class="w-layout-grid grid-contact">
                   <div class="form-element-1"><label for="name" class="form-label">Name</label><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name"></div>
                   <div class="form-element-1"><label for="name-6" class="form-label">Mail</label><input type="text" class="text-field w-input" maxlength="256" name="email" data-name="Name 6" placeholder="" id="name-6"></div>
@@ -102,14 +103,15 @@
             </div>
             <div class="w-form">
               <form id="career" name="career" data-name="Career Form">
-                <div class="w-layout-grid grid-32">
-                  <input type="hidden" name="position" ><a href="#" name="position" id="UX Designer"  class="button-5 w-button">UX Designer</a>
+                <!-- <div class="w-layout-grid grid-32">
+                  <input type="hidden" name="position">
+                  <a href="#" name="position" id="UX Designer"  class="button-5 w-button">UX Designer</a>
                   <a href="#" name="position" id="Product Designer" class="button-5 w-button">Product Designer</a>
                   <a href="#" name="position" id="UI Designer"  class="button-5 w-button">UI Designer</a>
-                 <a href="#" name="position" id="Front-End Developer"  class="button-5 w-button">Front-End Developer</a>
+                  <a href="#" name="position" id="Front-End Developer"  class="button-5 w-button">Front-End Developer</a>
                   <a href="#" name="position" id="Branding Consultant"  class="button-5 w-button">Branding Consultant</a>
-                 <a href="#" name="position" id="Mobile Developer"  class="button-5 w-button">Mobile Developer</a>
-                </div>
+                  <a href="#" name="position" id="Mobile Developer"  class="button-5 w-button">Mobile Developer</a>
+                </div> -->
                 <div class="w-layout-grid grid-contact">
                   <div class="form-element-1"><label for="name-9" class="form-label">Name</label><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="Name 8" placeholder="" id="name-8"></div>
                   <div class="form-element-1"><label for="name-9" class="form-label">Mail</label><input type="text" class="text-field w-input" maxlength="256" name="email" data-name="Name 6" placeholder="" id="name-6"></div>
