--- a/contact.html
+++ b/contact.html
@@ -56,9 +56,9 @@
           <a data-w-tab="1" class="con-tab w-inline-block w-tab-link w--current">
             <div class="text-block-29">Query &amp; Collaboration</div>
           </a>
-          <a data-w-tab="2" class="con-tab1 w-inline-block w-tab-link">
+          <!-- <a data-w-tab="2" class="con-tab1 w-inline-block w-tab-link">
             <div class="text-block-30">Career Opportunities</div>
-          </a>
+          </a> -->
         </div>
         <div class="tabs-content-2 w-tab-content">
           <div data-w-tab="1" class="tab-pane-1-4 w-tab-pane w--tab-active">
@@ -88,7 +88,8 @@
                   <div class="form-element-1"><label for="name-5" class="form-label">Phone</label><input type="tel" class="text-field w-input" maxlength="256" name="phone" data-name="Name 5" placeholder="" id="name-5"></div>
                   <div class="form-element-1"><label for="name-4" class="form-label">Businesss / Organisation</label><input type="text" class="text-field w-input" maxlength="256" name="businesss" data-name="Name 4" placeholder="" id="name-4"></div>
                   <div class="form-element-1"><label for="name-2" class="form-label">Enter Enquiry here</label><input type="text" class="text-field w-input" maxlength="256" name="message" data-name="Name 2" placeholder="" id="name-2"></div>
-                </div><input type="submit" value="Submit" data-wait="Please wait..." class="button-3 w-button"></form>
+                </div><input type="submit" value="Submit" data-wait="Please wait..." class="button-3 w-button">
+              </form>
               <div class="w-form-done">
                 <div>Thank you! Your submission has been received!</div>
               </div>
@@ -97,13 +98,13 @@
               </div>
             </div>
           </div>
-          <div data-w-tab="2" class="w-tab-pane">
+          <!-- <div data-w-tab="2" class="w-tab-pane">
             <div class="div-block-126">
               <div class="text-22-light">Hey, Fill in the details below to join us.</div>
             </div>
             <div class="w-form">
               <form id="career" name="career" data-name="Career Form">
-                <!-- <div class="w-layout-grid grid-32">
+                <div class="w-layout-grid grid-32">
                   <input type="hidden" name="position">
                   <a href="#" name="position" id="UX Designer"  class="button-5 w-button">UX Designer</a>
                   <a href="#" name="position" id="Product Designer" class="button-5 w-button">Product Designer</a>
@@ -111,14 +112,15 @@
                   <a href="#" name="position" id="Front-End Developer"  class="button-5 w-button">Front-End Developer</a>
                   <a href="#" name="position" id="Branding Consultant"  class="button-5 w-button">Branding Consultant</a>
                   <a href="#" name="position" id="Mobile Developer"  class="button-5 w-button">Mobile Developer</a>
-                </div> -->
+                </div>
                 <div class="w-layout-grid grid-contact">
                   <div class="form-element-1"><label for="name-9" class="form-label">Name</label><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="Name 8" placeholder="" id="name-8"></div>
                   <div class="form-element-1"><label for="name-9" class="form-label">Mail</label><input type="text" class="text-field w-input" maxlength="256" name="email" data-name="Name 6" placeholder="" id="name-6"></div>
                   <div class="form-element-1"><label for="name-9" class="form-label">Phone</label><input type="tel" class="text-field w-input" maxlength="256" name="phone" data-name="Name 5" placeholder="" id="name-5"></div>
                   <div class="form-element"><label class="btn custom-input-btn"><input type="file" name="resume" accept="application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document" id="resume" style="display: none;"><a class="button-7 w-button">Attach Resume</a></label></div>
                   <div class="form-element-1"><label for="name-9" class="form-label">Portfolio URL</label><input type="text" class="text-field w-input" maxlength="256" name="portfolio_url" data-name="Name 5" placeholder="" id="name-5"></div>
-                </div><input type="submit" value="Submit" data-wait="Please wait..." class="button-3 w-button"></form>
+                </div><input type="submit" value="Submit" data-wait="Please wait..." class="button-3 w-button">
+              </form>
               <div class="w-form-done">
                 <div>Thank you! Your submission has been received!</div>
               </div>
@@ -126,34 +128,11 @@
                 <div>Oops! Something went wrong while submitting the form.</div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
   </div>
-  <!-- <div class="section-new contact">
-    <div class="wrapper w-container">
-      <div>
-        <div class="text-h4---22px">Let us know what you are looking forward to discuss!</div>
-      </div>
-      <div class="w-form">
-        <form id="email-form" name="email-form" data-name="Email Form">
-          <div class="w-layout-grid grid-contact">
-            <div class="form-element-1"><label for="name" class="form-label">Name</label><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name"></div>
-            <div class="form-element-1"><label for="name-6" class="form-label">Mail</label><input type="text" class="text-field w-input" maxlength="256" name="email" data-name="Name 6" placeholder="" id="name-6"></div>
-            <div class="form-element-1"><label for="name-5" class="form-label">Phone</label><input type="tel" class="text-field w-input" maxlength="256" name="phone" data-name="Name 5" placeholder="" id="name-5"></div>
-            <div class="form-element-1"><label for="name-4" class="form-label">Businesss / Organisation</label><input type="text" class="text-field w-input" maxlength="256" name="businesss" data-name="Name 4" placeholder="" id="name-4"></div>
-            <div class="form-element-1"><label for="name-2" class="form-label">Enter Enquiry here</label><input type="text" class="text-field w-input" maxlength="256" name="message" data-name="Name 2" placeholder="" id="name-2"></div>
-          </div><input type="submit" value="Submit" data-wait="Please wait..." class="button-1 w-button"></form>
-        <div class="w-form-done">
-          <div>Thank you! Your submission has been received!</div>
-        </div>
-        <div class="w-form-fail">
-          <div>Oops! Something went wrong while submitting the form.</div>
-        </div>
-      </div>
-    </div>
-  </div> -->
   <div class="section-footer">
     <div class="footer-wrapper w-container">
       <div class="footer-idea">
