--- a/services.html
+++ b/services.html
@@ -335,11 +335,11 @@
               <div class="w-layout-grid grid-2-column-service">
                 <div class="text-h2-2 black left">Enterprise Applications</div>
                 <div>
-                  <div class="text-h3-3 black">Prioritizing the road map with the key features involved is the key for
-                    designing Enterprise Applications. It  involves closely working with the internal business and product
-                    teams; aligning the mission and vision with  the key Stakeholders of the business. Our consultants
-                    work as a true extension of the internal teams to bring  the key changes required in designing the
-                    application which acts as the backbone of the Core Business.</div>
+                  <div class="text-h3-3 black">Prioritizing the road map with the key features involved is the key 
+                    for designing Enterprise Applications. It  involves closely working with the internal business 
+                    and product teams; aligning the mission and vision with the key Stakeholders of the business. 
+                    Our consultants work as a true extension of the internal teams to bring the key changes required 
+                    in designing the application which acts as the backbone of the Core Business.</div>
                 </div>
               </div>
             </div>
@@ -347,10 +347,10 @@
               <div class="w-layout-grid grid-2-column-service">
                 <div class="text-h2-2 black left">Information Portals</div>
                 <div>
-                  <div class="text-h3-3 black">We discuss with the stakeholders to set the pitch and get the inputs of
-                    target audience to focus on customer engagement  and conversion. Build the face of your business that
-                    speaks of the product or service offered and acts as the  gateway for your business transactions. We
-                    focus on customer engagement and conversion.</div>
+                  <div class="text-h3-3 black">Discussion with the stakeholders to set the pitch and get the inputs 
+                    of target audience to focus on customer engagement and conversion. Building the face of your business 
+                    that speaks of the product or service offered and acts as the gateway for your business 
+                    transactions.</div>
                 </div>
               </div>
             </div>
@@ -358,13 +358,13 @@
               <div class="w-layout-grid grid-2-column-service">
                 <div class="text-h2-2 black left">Product Development</div>
                 <div>
-                  <div class="text-h3-3 black">We help to bring a product live beginning from ideation to market launch.
-                    Our consultants can work  as a true extension of internal business or development team to bring the
-                    product live.The key for a Product Development is understand the market, deep Research brings key
-                    Insights for  product development. Urban &amp; Hauser outline a range of new product development
-                    strategies  companies should consider. They are classified as Reactive or Proactive, depending on how
-                    a  company handles pressures from the market and how it decides to use external and internal sources
-                     of product development.</div>
+                  <div class="text-h3-3 black">Beginning from Ideation to Market Launch our Consultants can help you bring 
+                    the product live. Our consultants can work as a true extension of internal business or development team. 
+                    The key for a Product Development is understand the Market; deep Research brings key Insights for 
+                    product development.<br>
+                    Urban & Hauser outline a range of new product development strategies  companies should consider. 
+                    They are classified as Reactive or Proactive, depending on how a company handles pressures from the 
+                    market and how it decides to use external and internal sources of product development.</div>
                 </div>
               </div>
             </div>
@@ -372,15 +372,15 @@
               <div class="w-layout-grid grid-2-column-service">
                 <div class="text-h2-2 black left">Digital Transformation</div>
                 <div>
-                  <div class="text-h3-3 black">We help clients transform their legacy system by reimagining their process
-                    to embrace continuous  improvement and innovation to elevate customer experience. A digital
-                    transformation strategy can immensely help transform the business, streamline process  with the use of
-                    latest technologies to enhance customer experience and delivery better  productivity. The concern for
-                    many businesses can be, Are we too late to begin now?  It’s never too late to begin, is better to
-                    start now than never. In fact, digital speed is as  much as 5 times faster than a traditional
-                    business, and that pace is essential to becoming a  pioneer in the business domain. Those companies at
-                    the forefront of the digital revolution earn  much more authority, trust and respect from customers.
-                  </div>
+                  <div class="text-h3-3 black">Transform the legacy system by reimagining the Process to embrace 
+                    Continuous Improvement & Innovation to elevate customer experience. A digital transformation 
+                    strategy can immensely help transform the business, streamline process with the use of latest 
+                    technologies for better customer experience and delivery better productivity.<br>
+                    The concern for many businesses can be, Are we too late to begin now?  It’s never too late to 
+                    begin, it is better to start now than never. In fact, digital speed is as much as 5 times faster 
+                    than a traditional business, and that pace is essential to becoming a  pioneer in the business 
+                    domain. Those companies at the forefront of the digital revolution earn much more authority, 
+                    trust and respect from customers.</div>
                 </div>
               </div>
             </div>
@@ -388,10 +388,11 @@
               <div class="w-layout-grid grid-2-column-service">
                 <div class="text-h2-2 black left">Strategy Design</div>
                 <div>
-                  <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is
-                    launched in the market by testing it with a sample population [small group of actual users].It helps
-                    the business to evaluates the product or website before it is launched in the market by testing it
-                    with a sample population [small group of actual users.</div>
+                  <div class="text-h3-3 black">Defining every aspect of the process from the all the channel (physical and 
+                    digital) before the initiating the design phase give the team a clear direction on the features to be 
+                    worked upon. This helps to target the challenges, user needs, aspiration, focus area to narrow down to 
+                    the solutions and thereby validate the ideas - set the milestones and deliver them as expected with 
+                    fewer misunderstanding and lesser rework.</div>
                 </div>
               </div>
             </div>
@@ -399,12 +400,12 @@
               <div class="w-layout-grid grid-2-column-service">
                 <div class="text-h2-2 black left">Mobile Applications</div>
                 <div>
-                  <div class="text-h3-3 black">Mobile Apps have the potential to increase the business productivity
-                    multifold by being in the field. Helps your product to reach masses and plays a critical role for
-                    reaching the customers. With the need for constant updates and customer interaction the demand for
-                    mobile apps have increased multifold.  Aligning with the Native Ecosystem is the key to design for
-                    Android &amp; iOS which helps in easier adaptability.  Our designers can churn the right features and
-                    engagement with the best of customer experience. </div>
+                  <div class="text-h3-3 black">Mobile Apps have the potential to increase the business productivity 
+                    multi-fold by being in the field. Helps your product to reach masses and plays a critical role for 
+                    reaching the customers. With the need for constant updates and customer interaction the demand for 
+                    mobile apps have increased multi-fold. Aligning with the Native Ecosystem is the key to design for 
+                    Android & iOS which helps in easier adaptability. Our designers can churn the right features and 
+                    engagement with the best of customer experience.</div>
                 </div>
               </div>
             </div>
@@ -448,64 +449,67 @@
         <div id="Enterprise-Application" class="w-layout-grid grid-2-column-3">
           <div class="text-h2-2 black left">Enterprise Applications</div>
           <div>
-            <div class="text-h3-3 black">Prioritizing the road map with the key features involved is the key for designing
-              Enterprise Applications. It  involves closely working with the internal business and product teams; aligning
-              the mission and vision with  the key Stakeholders of the business. Our consultants work as a true extension
-              of the internal teams to bring  the key changes required in designing the application which acts as the
+            <div class="text-h3-3 black">Prioritizing the road map with the key features involved is the key for designing 
+              Enterprise Applications. It  involves closely working with the internal business and product teams; aligning 
+              the mission and vision with the key Stakeholders of the business. Our consultants work as a true extension 
+              of the internal teams to bring the key changes required in designing the application which acts as the 
               backbone of the Core Business.</div>
           </div>
         </div>
         <div id="Information-Portal" class="w-layout-grid grid-2-column-3">
           <div class="text-h2-2 black left">Information Portals</div>
           <div>
-            <div class="text-h3-3 black">We discuss with the stakeholders to set the pitch and get the inputs of target
-              audience to focus on customer engagement  and conversion. Build the face of your business that speaks of the
-              product or service offered and acts as the  gateway for your business transactions. We focus on customer
-              engagement and conversion.</div>
+            <div class="text-h3-3 black">Discussion with the stakeholders to set the pitch and get the inputs 
+              of target audience to focus on customer engagement and conversion. Building the face of your business 
+              that speaks of the product or service offered and acts as the gateway for your business 
+              transactions.</div>
           </div>
         </div>
         <div id="Product-Development" class="w-layout-grid grid-2-column-3">
           <div class="text-h2-2 black left">Product Development</div>
           <div>
-            <div class="text-h3-3 black">We help to bring a product live beginning from ideation to market launch. Our
-              consultants can work  as a true extension of internal business or development team to bring the product
-              live. The key for a Product Development is understand the market, deep Research brings key Insights for
-               product development. Urban &amp; Hauser outline a range of new product development strategies  companies
-              should consider. They are classified as Reactive or Proactive, depending on how a  company handles pressures
-              from the market and how it decides to use external and internal sources  of product development.</div>
+            <div class="text-h3-3 black">Beginning from Ideation to Market Launch our Consultants can help you bring 
+              the product live. Our consultants can work as a true extension of internal business or development team. 
+              The key for a Product Development is understand the Market; deep Research brings key Insights for 
+              product development.<br>
+              Urban & Hauser outline a range of new product development strategies  companies should consider. 
+              They are classified as Reactive or Proactive, depending on how a company handles pressures from the 
+              market and how it decides to use external and internal sources of product development.</div>
           </div>
         </div>
         <div id="Digital-Transformation" class="w-layout-grid grid-2-column-3">
           <div class="text-h2-2 black left">Digital Transformation</div>
           <div>
-            <div class="text-h3-3 black">We help clients transform their legacy system by reimagining their process to
-              embrace continuous  improvement and innovation to elevate customer experience. A digital transformation
-              strategy can immensely help transform the business, streamline process  with the use of latest technologies
-              to enhance customer experience and delivery better  productivity. The concern for many businesses can be,
-              Are we too late to begin now?  It’s never too late to begin, is better to start now than never. In fact,
-              digital speed is as  much as 5 times faster than a traditional business, and that pace is essential to
-              becoming a  pioneer in the business domain. Those companies at the forefront of the digital revolution earn
-               much more authority, trust and respect from customers.</div>
+            <div class="text-h3-3 black">Transform the legacy system by reimagining the Process to embrace 
+              Continuous Improvement & Innovation to elevate customer experience. A digital transformation 
+              strategy can immensely help transform the business, streamline process with the use of latest 
+              technologies for better customer experience and delivery better productivity.<br>
+              The concern for many businesses can be, Are we too late to begin now?  It’s never too late to 
+              begin, it is better to start now than never. In fact, digital speed is as much as 5 times faster 
+              than a traditional business, and that pace is essential to becoming a  pioneer in the business 
+              domain. Those companies at the forefront of the digital revolution earn much more authority, 
+              trust and respect from customers.</div>
           </div>
         </div>
         <div id="Strategy-design" class="w-layout-grid grid-2-column-3">
           <div class="text-h2-2 black left">Strategy Design</div>
           <div>
-            <div class="text-h3-3 black">It helps the business to evaluates the product or website before it is launched
-              in the market by testing it with a sample population [small group of actual users].It helps the business to
-              evaluates the product or website before it is launched in the market by testing it with a sample population
-              [small group of actual users.</div>
+            <div class="text-h3-3 black">Defining every aspect of the process from the all the channel (physical and 
+              digital) before the initiating the design phase give the team a clear direction on the features to be 
+              worked upon. This helps to target the challenges, user needs, aspiration, focus area to narrow down to 
+              the solutions and thereby validate the ideas - set the milestones and deliver them as expected with 
+              fewer misunderstanding and lesser rework.</div>
           </div>
         </div>
         <div id="Mobile-application" class="w-layout-grid grid-2-column-3">
           <div class="text-h2-2 black left">Mobile Applications</div>
           <div>
-            <div class="text-h3-3 black">Mobile Apps have the potential to increase the business productivity multifold by
-              being in the field. Helps your product to reach masses and plays a critical role for reaching the customers.
-              With the need for constant updates and customer interaction the demand for mobile apps have increased
-              multifold.  Aligning with the Native Ecosystem is the key to design for Android &amp; iOS which helps in
-              easier adaptability.  Our designers can churn the right features and engagement with the best of customer
-              experience. </div>
+            <div class="text-h3-3 black">Mobile Apps have the potential to increase the business productivity 
+              multi-fold by being in the field. Helps your product to reach masses and plays a critical role for 
+              reaching the customers. With the need for constant updates and customer interaction the demand for 
+              mobile apps have increased multi-fold. Aligning with the Native Ecosystem is the key to design for 
+              Android & iOS which helps in easier adaptability. Our designers can churn the right features and 
+              engagement with the best of customer experience.</div>
           </div>
         </div>
       </div>
