--- a/contact.html
+++ b/contact.html
@@ -56,9 +56,9 @@
           <a data-w-tab="1" class="con-tab w-inline-block w-tab-link w--current">
             <div class="text-block-29">Query &amp; Collaboration</div>
           </a>
-          <!-- <a data-w-tab="2" class="con-tab1 w-inline-block w-tab-link">
+          <a data-w-tab="2" class="con-tab1 w-inline-block w-tab-link">
             <div class="text-block-30">Career Opportunities</div>
-          </a> -->
+          </a>
         </div>
         <div class="tabs-content-2 w-tab-content">
           <div data-w-tab="1" class="tab-pane-1-4 w-tab-pane w--tab-active">
@@ -67,21 +67,21 @@
             </div>
             <div class="w-form">
               <form id="contact" name="contact" data-name="Contact Form">
-                <!-- <div class="w-layout-grid grid-32">
-                  <input type="hidden" name="position" >
-                  <a href="#" name="position" id="UX Consulting" class="button-6 w-button">UX Consulting</a>
-                  <a href="#" name="position" id="Visual design" class="button-6 w-button">Visual design</a>
-                  <a href="#" name="position" id="Branding" class="button-6 w-button">Branding</a>
-                  <a href="#" name="position" id="Digital Transformation" class="button-5 w-button">Digital Transformation</a>
-                  <a href="#" name="position" id="Front End Dev" class="button-6 w-button">Front End Dev</a>
-                  <a href="#" name="position" id="Back End Dev" class="button-6 w-button">Back End Dev</a>
-                  <a href="#" name="position" id="Strategy Design" class="button-6 w-button">Strategy Design</a>
-                  <a href="#" name="position" id="Mobile App" class="button-6 w-button">Mobile App</a>
-                  <a href="#" name="position" id="Enterprise App" class="button-6 w-button">Enterprise App</a>
-                  <a href="#" name="position" id="Product Development" class="button-5 w-button">Product Development</a>
-                  <a href="#" name="position" id="User Testing" class="button-6 w-button">User Testing</a>
-                  <a href="#" name="position" id="Something more" class="button-6 w-button">Something more</a>
-                </div> -->
+                <div class="w-layout-grid grid-32" class="position-inputs">
+                  <input type="hidden" name="position" value="">
+                  <a href="javascript:void(0)" id="UX Consulting" class="button-6 w-button" (click)="function()">UX Consulting</a>
+                  <a href="javascript:void(0)" id="Visual design" class="button-6 w-button" (click)="function()">Visual design</a>
+                  <a href="javascript:void(0)" id="Branding" class="button-6 w-button">Branding</a>
+                  <a href="javascript:void(0)" id="Digital Transformation" class="button-5 w-button">Digital Transformation</a>
+                  <a href="javascript:void(0)" id="Front End Dev" class="button-6 w-button">Front End Dev</a>
+                  <a href="javascript:void(0)" id="Back End Dev" class="button-6 w-button">Back End Dev</a>
+                  <a href="javascript:void(0)" id="Strategy Design" class="button-6 w-button">Strategy Design</a>
+                  <a href="javascript:void(0)" id="Mobile App" class="button-6 w-button">Mobile App</a>
+                  <a href="javascript:void(0)" id="Enterprise App" class="button-6 w-button">Enterprise App</a>
+                  <a href="javascript:void(0)" id="Product Development" class="button-5 w-button">Product Development</a>
+                  <a href="javascript:void(0)" id="User Testing" class="button-6 w-button">User Testing</a>
+                  <a href="javascript:void(0)" id="Something more" class="button-6 w-button">Something more</a>
+                </div>
                 <div class="w-layout-grid grid-contact">
                   <div class="form-element-1"><label for="name" class="form-label">Name</label><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name"></div>
                   <div class="form-element-1"><label for="name-6" class="form-label">Mail</label><input type="text" class="text-field w-input" maxlength="256" name="email" data-name="Name 6" placeholder="" id="name-6"></div>
@@ -98,7 +98,7 @@
               </div>
             </div>
           </div>
-          <!-- <div data-w-tab="2" class="w-tab-pane">
+          <div data-w-tab="2" class="w-tab-pane">
             <div class="div-block-126">
               <div class="text-22-light">Hey, Fill in the details below to join us.</div>
             </div>
@@ -128,7 +128,7 @@
                 <div>Oops! Something went wrong while submitting the form.</div>
               </div>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
     </div>
